--- a/project/Project.Rmd
+++ b/project/Project.Rmd
@@ -153,7 +153,7 @@ Using data manipulation skills in R, we shaped the dataset to show each observat
 glimpse(tennis)
 ```
 
-Because we have 11,037 observations, we will randomly select observations to be included in a smaller dataset so that we can effectively examine exploratory data analysis. Below, is our code on how we randomly selected the observations in our new dataset.
+Because we have 11,037 observations, we will randomly select 1000 observations to be included in a smaller dataset so that we can effectively examine exploratory data analysis. 
 
 ```{r}
 set.seed(1234)
@@ -331,101 +331,13 @@ After looking at the VIF values, we see that the VIF for `surface` is greater th
 
 # Linear Regression Assumptions: Version 2 
 
-Because one of our residuals plots has a non-linear relationship, we will remove `bpSaved` from the model and redo the assumptions. We will also remove `surface` and its corresponding interactions effects because `surface` has a high VIF value. 
+This is our revised final model. We will use this model to conduct predictions and our analysis. The assumptions are in a separate Rmd file. 
 
 ```{r}
 newten <- ten
 final <- glm(status ~ minutes + ht + rankpoints + ace + df, family = binomial, data = newten)
-kable(tidy(final), format = "markdown", digits = 3)
+kable(tidy(final), format = "markdown", digits = 6)
 ```
-
-```{r}
-pairs(status ~ minutes + ht + rankpoints + ace + df, data = newten)
-```
-
-The scatterplot matrix does not show obvious signs of multicollinearity. 
-
-## Model Assessment
-
-### Binned Plots with Residuals vs Predicted
-
-```{r}
-newten <- newten %>% mutate(Residuals = residuals.glm(final,type="response"),
-                          Predicted = predict.glm(final,type="response"))
-
-binnedplot(newten$Predicted, newten$Residuals,xlab="Predicted Probabilities",
-           ylab="Residuals",main="Binned Residuals vs. Predicted Probabilities")
-```
-
-```{r,fig.height=4,fig.width=4,echo=F}
-binnedplot(newten$minutes, newten$Residuals,xlab="Minutes",
-           ylab="Residuals",main="Binned Residuals vs. Minutes")
-
-binnedplot(newten$ht, newten$Residuals,xlab="Height",
-           ylab="Residuals",main="Binned Residuals vs. Height")
-
-binnedplot(newten$ace, newten$Residuals,xlab="Aces",
-           ylab="Residuals",main="Binned Residuals vs. Aces")
-
-binnedplot(newten$df, newten$Residuals,xlab="Double Faults",
-           ylab="Residuals",main="Binned Residuals vs. Double Faults")
-
-binnedplot(newten$rankpoints, newten$Residuals,xlab="Rankpoints",
-           ylab="Residuals",main="Binned Residuals vs. Rankpoints")
-```
-
-### ROC curve and Confusion Matrix 
-
-```{r}
-ROC.newten <- roc(newten$status,newten$Predicted,plot=T)
-```
-
-```{r}
-ROC.newten$auc
-```
-
-```{r}
-threshold = 0.30
-table(newten$status, newten$Predicted > threshold)
-```
-
-```{r}
-(342 + 10)/(342 + 10 + 10 + 638)
-```
-
-## Influential Points 
-
-```{r}
-newten <- newten %>%
-  mutate(leverage = hatvalues(final), 
-         cooks = cooks.distance(final),
-         stand.resid = rstandard(final), 
-         obs.num = row_number())
-```
-
-### Leverage and Cook's Distance 
-
-```{r}
-p1 <- ggplot(data=newten, aes(x=obs.num,y=leverage)) + 
-  geom_point(alpha=0.5) + 
-  geom_hline(yintercept=0.1,color="red")+
-  labs(x="Observation Number",y="Leverage",title="Leverage")
-
-p2 <- ggplot(data=newten, aes(x=obs.num,y=cooks)) + 
-  geom_point() + 
-  geom_hline(yintercept=1,color="red")+
-  labs(x="Observation Number",y="Cook's Distance",title="Cook's Distance")
-
-plot_grid(p1,p2)
-```
-
-## VIF 
-
-```{r}
-tidy(vif(final))
-```
-
-There are no observations with large leverage or a Cook's Distance that is above the threshold. We also see that the VIF values of our variables are all less than 10. 
 
 # Prediction
 
@@ -449,42 +361,24 @@ predict(final, newdata=djo1, type="response")
 ```
 
 ```{r}
-predsdjo1 <- predict(final, djo1, type="response", se.fit=TRUE)
 predsfed <- predict(final, fed, type="response", se.fit=TRUE)
-
-predfdjo1 <- predsdjo1$fit # predicted
-lowerdjo1 <- predsdjo1$fit - (1.96*predsdjo1$se.fit) # lower bounds
-upperdjo1 <- predsdjo1$fit + (1.96*predsdjo1$se.fit) # upper bounds
+predsdjo1 <- predict(final, djo1, type="response", se.fit=TRUE)
 
 predffed <- predsfed$fit # predicted
 lowerfed <- predsfed$fit - (1.96*predsfed$se.fit) # lower bounds
 upperfed <- predsfed$fit + (1.96*predsfed$se.fit) # lower bounds
 
-c(predfdjo1, lowerdjo1, upperdjo1)
+predfdjo1 <- predsdjo1$fit # predicted
+lowerdjo1 <- predsdjo1$fit - (1.96*predsdjo1$se.fit) # lower bounds
+upperdjo1 <- predsdjo1$fit + (1.96*predsdjo1$se.fit) # upper bounds
+
 c(predffed, lowerfed, upperfed)
+c(predfdjo1, lowerdjo1, upperdjo1)
 ```
 
-We see that the model predicts Roger Federer has a 79.37% chance of winning the match, while Novak Djokovic has a 92.52% chance of winning the match. This is mainly because Djokovic's rank points were almost double that of Federer's at the time. However, Federer won the match. In this case, we had an anomaly. 
+The model predicts that Roger Federer has a 79.37% chance of winning the match, and we are 95% confident that the probability of Federer winning the match is between 74.74% and 84.00%. The model predicts that Novak Djokovic has a 92.52% chance of winning the match, and we are 95% confident that the probability of Djokovic winning the match is between 87.16% and 96.49%. 
 
-The next match we will look at was played at the China Open in 2013 and was between Novak Djokovic and Rafael Nadal.
-
-```{r}
-tennis %>%
-  filter(name == "Novak Djokovic" | name == "Rafael Nadal",
-         tourney_name == "Beijing",
-         loser_name == "Rafael Nadal",
-         tourney_id == "2013-747")
-
-```
-
-```{r}
-djo2 <- data.frame(minutes = 87, ht = 188, rankpoints = 11120, ace = 5, df = 1)
-nadal <- data.frame(minutes = 87, ht = 185, rankpoints = 10860, ace = 2, df = 2)
-predict(final, newdata=djo2, type="response")
-predict(final, newdata=nadal, type="response")
-```
-
-We see that the model predicts Novak Djokovic has a 91.82% chance of winning the match, while Rafael Nadal has a 87.96% chance of winning the match. Djokovic won the match. 
+This is mainly because Djokovic's rank points were almost double that of Federer's at the time. However, Federer won the match. In this case, we had an anomaly. 
 
 ### Test Case with Similar Rank Points 
 
@@ -522,13 +416,15 @@ c(predfjo, lowerjo, upperjo)
 c(predfllodra, lowerllodra, upperllodra)
 ```
 
+The model predicts that Jo Wilfried Tsonga has a 71.81% of chance of winning the match, and we are 95% confident that the probability of Tsonga winning the match is between 64.57% and 79.04%. The model predicts that Michael Llodra has a 70.16% chance of winning the match, and we are 95% confident that the probability of Llodra winning the match is between 62.05% and 78.28%. 
 
-We see that the model predicts Jo Wilfried Tsonga has a 71.81% of chance of winning the match, while Michael Llodra has a 70.16% chance of winning the match. These percentages are lower because the players' rankpoints are significantly lower than those of Nadal's and Djokovic's. 
+The model predicts that Tsonga has a higher probability of winning the match, and he was the winner. The probabilities of winning are much closer because the two players have similar rank points, but are lower than that of the previous match we examined because the players' rank points are significantly lower than those of Nadal's and Djokovic’s.
 
-# Conclusion
+# Conclusion 
 
+In general, if both players have similar statistics, the model does a good job of predicting which player will win the match based off who has the higher probability of winning. If the players have a certain statistic that is significantly different, especially rank points, the model will predict that the player with higher rank points has a higher probability of winning. 
 
-
+This indicates one of the flaws of our model; one player having a higher probability of winning does not mean that player won, as we saw with the first prediction example. Federer and Djokovic are both exceptional players, and most matches between the two are toss-ups. The easiest way to improve our predictions and their corresponding confidence intervals would be to include all 11,037 observations. This would decrease the standard error of the confidence intervals, and create a smaller and more precise interval. 
 
 
 
